--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 	z-index: -100;
 }
 
-@media(max-width: 820px) and (orientation: portrait){
+@media(max-width: 620px) and (orientation: portrait){
 	#landscape {
 		display: flex;
 		position: fixed;
@@ -35,9 +35,21 @@ body {
 		z-index: 990000;
 		width: 100%;
 		height: 100vh;
-		font-size: 120%;
+		font-size: 190%;
 		align-items: center;
 		justify-content: center;
+	}
+	.rotar-img {
+		height: 10rem;
+	}
+}
+@media(max-width: 850px) and (orientation: landscape){
+	.emptyOne {
+		border: solid 0.3rem rgb(35, 124, 6);
+		background: rgba(121, 50, 50, 0.6);
+		height: 4rem;
+		width: 4rem;
+		margin: 5px;
 	}
 }
 .container {
